# TrajectoryCollection

LJHTest/: CMakeLists.txt  test.cpp
include/TrajColl/: CubicSpline.h  Func.h
